# sync

./: .gitignore  CMakeLists.txt  Makefile  README.md  g.json  main.c  sync.c
.devcontainer/: devcontainer.json
.github/workflows/: cmake.yml
cmake/: sync-config.cmake
include/sync/: sync.h
